--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,9 @@ a {
 ul {
     list-style: none;
 }
-img {
+/* img {
     width: 100%;
-}
+} */
 
 .container {
     width: 1226px;
@@ -29,7 +29,6 @@ img {
     height: 106px;
     display: flex;
     justify-content: space-between;
-    align-items: end;
 }
 .header .logo {
     width: 66.59px;
@@ -121,6 +120,18 @@ img {
 .menu__dropdown_list--visible {
     display: block;
 }
+/* Menu, Hamburger, Close buttons active */
+.menu__active {
+    left: 0;
+    visibility: visible;
+    opacity: 1;
+}
+.menu__close, .hamburger {
+    display: none;
+}
+.active {
+    display: block;
+}
 
 .main {
     min-height: 100vh;
@@ -199,4 +210,125 @@ img {
 }
 .swiper-pagination-bullet.swiper-pagination-bullet-active {
     background-color: #fff;
+}
+
+@media (max-width: 1200px) {
+    .container {
+        width: 920px;
+    }
+    .header {
+        padding-top: 35px;
+    }
+    .header .logo {
+        height: 35.64px;
+    }
+    .logo .logo__text {
+        font: normal normal 600 50px/25px Source Sans Pro;
+    }
+    .main__right {
+        margin: 55px 0 0 0;
+    }
+    .main__woman img {
+        max-width: 70%;
+    }
+}
+
+@media (max-width: 991px) {
+    .container {
+        width: 720px;
+    }
+    .header {
+        padding-top: 60px;
+        height: 85px;
+    }
+    .header .logo {
+        height: 50px;
+    }
+    .logo .logo__text {
+        font: normal normal 600 35px/50px Source Sans Pro;
+    }
+    .main__woman {
+        display: none;
+    }
+}
+
+@media (max-width: 767px) {
+    .container {
+        width: 540px;
+    }
+    .menu {
+        padding: 50px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        width: 100vw;
+        height: 100vh;
+        background-color: rgba(41, 42, 45);
+        transition: all .5s ease;
+        z-index: 1000;
+    }
+    .menu__active {
+        left: 0;
+        visibility: visible;
+        opacity: 1;
+    }
+    .hamburger {
+        width: 42px;
+        height: 25px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        cursor: pointer;
+    }
+    .hamburger div {
+        width: 100%;
+        height: 2px;
+        background-color: #C445F4;
+    }
+    .menu__close {
+        display: block;
+        position: absolute;
+        left: 42px;
+        top: 42px;
+        cursor: pointer;
+    }
+    .main {
+        z-index: 0;
+    }
+    .main {
+        min-height: 100vh;
+        background: url(../icons/Triangle-edited.svg) center 20px/450px 500px no-repeat;
+    }
+    .main__text-img {
+        width: auto;
+        height: auto;
+    }
+    .main__wrapper {
+        position: relative;
+        z-index: 1;
+    }
+    .main__right {
+        margin: 55px 0 0 0;
+        width: 180px;
+    }
+}
+
+@media (max-width: 576px) {
+    .container {
+        width: 100%;
+    }
+    .nav .menu {
+        width: 100%;
+    }
+    .main__wrapper {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .main__slider {
+        margin-top: 10px;
+    }
 }
