--- a/css/style.css
+++ b/css/style.css
@@ -31,16 +31,16 @@ ul {
     justify-content: space-between;
 }
 .header .logo {
-    width: 66.59px;
-    height: 65.64px;
+    height: 60px;
     display: flex;
-    width: 323px;
+    width: 270px;
     cursor: pointer;
 }
+.logo .logo__img {
+    width: 100%;
+}
 .logo .logo__text {
-    text-align: left;
-    font: normal normal 600 64px/80px Source Sans Pro;
-    letter-spacing: 0px;
+    font: normal normal 600 55px/35px Source Sans Pro;
     color: #C445F4;
 }
 
@@ -155,6 +155,9 @@ ul {
 .main__video {
     margin-top: 48px;
 }
+.main__woman-img {
+    width: 90%;
+}
 
 .main__swiper-wrapper {
     padding: 0 50px;
@@ -247,6 +250,7 @@ ul {
     }
     .header .logo {
         height: 50px;
+        width: auto;
     }
     .logo .logo__text {
         font: normal normal 600 35px/50px Source Sans Pro;
@@ -278,6 +282,7 @@ ul {
         left: 0;
         visibility: visible;
         opacity: 1;
+        width: 50vw;
     }
     .hamburger {
         width: 42px;
